--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/aawilson166/restaurant#readme",
   "dependencies": {
+    "bootstrap": "^5.0.0-beta2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.18"
+    "mongoose": "^5.11.18",
+    "react-bootstrap": "^1.5.1"
   }
 }
